[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/gem.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Open_Sans/OpenSans-RegularItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/tooltip_body.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/UI/Tooltip/Tooltip.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/tooltip_panel.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/tooltip_body_condensed.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/ui/tooltip_progress_under.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/tooltip_progress.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Panel" type="NinePatchRect"]
margin_left = 4.0
margin_top = 4.0
margin_right = 266.0
margin_bottom = 400.0
texture = ExtResource( 6 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
script = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_right = 39.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Title"

[node name="SellPriceContainer" type="HBoxContainer" parent="."]
margin_right = 80.0
margin_bottom = 23.0
size_flags_horizontal = 0
custom_constants/separation = 8

[node name="SellPriceLabel" type="Label" parent="SellPriceContainer"]
margin_right = 69.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 7 )
text = "Sell price:"

[node name="SellPriceTexture" type="TextureRect" parent="SellPriceContainer"]
margin_left = 77.0
margin_right = 77.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="PriceContainer" type="HBoxContainer" parent="."]
margin_right = 50.0
margin_bottom = 23.0
size_flags_horizontal = 0
custom_constants/separation = 8

[node name="PriceLabel" type="Label" parent="PriceContainer"]
margin_right = 42.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 7 )
text = "Price:"

[node name="PriceTexture" type="TextureRect" parent="PriceContainer"]
margin_left = 50.0
margin_right = 50.0
margin_bottom = 23.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="RecipeContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 189.0
margin_bottom = 23.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="RecipeContainer"]
margin_right = 54.0
margin_bottom = 23.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Recipe:"

[node name="TextureRect" type="TextureRect" parent="RecipeContainer"]
margin_left = 58.0
margin_top = 3.0
margin_right = 74.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="RecipeContainer"]
margin_left = 78.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="RecipeContainer"]
margin_left = 98.0
margin_top = 3.0
margin_right = 114.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 12
size_flags_vertical = 4
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="RecipeContainer"]
margin_left = 118.0
margin_top = 3.0
margin_right = 134.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="RecipeContainer"]
margin_left = 138.0
margin_top = 3.0
margin_right = 154.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="Description" type="Label" parent="."]
margin_right = 88.0
margin_bottom = 23.0
rect_clip_content = true
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
custom_constants/line_spacing = -5
autowrap = true

[node name="DescriptionItalics" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_constants/line_spacing = -5
autowrap = true

[node name="Progress" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 60.0
margin_right = 66.0
margin_bottom = 86.0
size_flags_horizontal = 0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
fill_mode = 1
nine_patch_stretch = true
stretch_margin_left = 12
stretch_margin_top = 12
stretch_margin_right = 12
stretch_margin_bottom = 12

[node name="BG" type="TextureRect" parent="Progress"]
modulate = Color( 0.545098, 0.329412, 0.654902, 1 )
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 22.0
stretch_mode = 2

[node name="Label" type="Label" parent="Progress"]
margin_left = 12.0
margin_right = 52.0
margin_bottom = 26.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="TimeLeft" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="UsedPotionsLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )

[node name="UsedPotions" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Potion0" type="TextureRect" parent="UsedPotions"]
margin_right = 18.0
margin_bottom = 40.0
size_flags_horizontal = 3
stretch_mode = 4

[node name="Potion1" type="TextureRect" parent="UsedPotions"]
margin_left = 22.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
stretch_mode = 4
